Fix icon alignment

--- a/styles/scss/application.scss
+++ b/styles/scss/application.scss
@@ -1082,7 +1082,7 @@ a {
   content: "\e907";
   font-size: 1.5em;
   position: relative;
-  top: 0.2em;
+  top: 0.1em;
   left: 0.2em;
   margin-right: 10px;
 }
@@ -1092,7 +1092,7 @@ a {
   content: "\e906";
   font-size: 1.5em;
   position: relative;
-  top: 0.2em;
+  top: 0.1em;
   left: 0.2em;
   margin-right: 10px;
 }
